Infrastructure-SD/back-end-kubernetes/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  selector:
    app: backend
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 8080
      targetPort: 8080
