Infrastructure-SD/back-end-kubernetes/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend
spec:
  backend:
    serviceName: backend
    servicePort: 8080
